--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # NEXT_PUBLIC_BASE_URL = https://www.seekahost.lk
-NEXT_PUBLIC_BASE_URL = https://localhost:3000
+# NEXT_PUBLIC_BASE_URL = https://localhost:3000
+NEXT_PUBLIC_BASE_URL = https://dev.seekahost.lk
