feat: contact form

--- a/.env
+++ b/.env
@@ -2,6 +2,10 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=seekaHostcms123
 POSTGRES_DB=postgres
 
+EMAIL_USER=sender@gmail.com
+EMAIL_PASS=sender_app_password
+EMAIL_RECEIVER=receiver@gmail.com
+
 NEXT_PUBLIC_API_URL=http://backend:1337
 NEXT_PUBLIC_STRAPI_PROTOCOL=http
 NEXT_PUBLIC_STRAPI_HOSTNAME=backend
