--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@strapi/blocks-react-renderer": "^1.0.2",
     "next": "15.2.2",
     "next-intl": "^4.3.3",
+    "nodemailer": "^7.0.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
